--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                     Full Name:<br>
                     <input type="text" minlength="4" placeholder="Enter Name Here" id="fullName"><span id="nameError"></span><br>
                     Email Address:<br>
-                    <input type="email" id="emailAddress"><br>
+                    <input type="email" placeholder="Email Address Here" id="emailAddress"><br>
                     Title:<br>
-                    <input type="text" id="title"><br>
+                    <input type="text" placeholder="Title" id="title"><br>
                     Message:<br>
-                    <textarea rows="4" cols="20" minlength="25" id="message" ></textarea><br>
+                    <textarea placeholder="Message Here" rows="4" cols="20" minlength="25" id="message" ></textarea><br>
                     <input type="submit" value="Send" id="contactButton">
                 </form>
             </div>
