Added name attribute to input button

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <input type="text" placeholder="Title" id="title" name="title"><br>
                     Message:<br>
                     <textarea placeholder="Message Here" rows="4" cols="20" minlength="25" id="message" name="message"  ></textarea><br>
-                    <input type="submit" value="Send" id="contactButton">
+                    <input type="submit" value="Send" id="contactButton" name="contactButton">
                 </form>
             </div>
         </div>
