Changed action to contact.php

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div>
             <h1> Contact Me</h1>
             <div id="formClass">
-                <form action="index.php" method="post" >
+                <form action="contact.php" method="post" >
                     Full Name:<br>
                     <input type="text" minlength="4" placeholder="Enter Name Here" id="fullName" name="fullName" ><span id="nameError"></span><br>
                     Email Address:<br>
